# HuanEngine

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bug record.md
Assets/Shaders/cube_texture/: cube_texture.frag  cube_texture.vert
Assets/Shaders/flat/: flat.frag  flat.vert
Assets/Shaders/flat_texture/: flat_texture.frag  flat_texture.vert
Assets/Shaders/instancing/: cube_texture.vert
Assets/Shaders/metal/: metal.frag
Assets/Shaders/test2/: test2.frag  test2.vert
Assets/Textures/Metal/: Metal055A_1K-PNG.mtlx  Metal055A_1K-PNG.usdc
Huan/: CMakeLists.txt  CMakeSettings.json
Huan/include/: HuanPCH.h
Huan/include/DebugTools/: Instrumentor.h
Huan/include/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h  UselessEvent.h
Huan/include/Huan/: Application.h  Core.h  KeyCodes.h  MouseButtonCodes.h  Window.h
Huan/include/Layer/: Layer.h  LayerStack.h
Huan/include/Platform/OpenGL/: OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLVertexArray.h
Huan/include/Platform/OpenGL/Buffer/: OpenGLIndexBuffer.h  OpenGLVertexBuffer.h
Huan/include/Platform/OpenGL/Material/: OpenGLMaterial.h
Huan/include/Platform/OpenGL/Texture/: OpenGLTexture2D.h
Huan/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Huan/include/Renderer/: GraphicsContext.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  RendererConfig.h  Scene.h  Shader.h  VertexArray.h
Huan/include/Renderer/Buffer/: BufferLayout.h  IndexBuffer.h  VertexBuffer.h
Huan/include/Renderer/Material/: Material.h
Huan/include/Renderer/Primitives/: Color.h  Point2D.h  PrimitiveProperty.h  Quad2D.h  Shape2D.h
Huan/include/Renderer/Texture/: Texture.h  Texture2D.h
Huan/include/Renderer/Utils/: Camera.h  OrthogonalCamera.h  OrthogonalCameraController.h  PerspectiveCamera.h  PerspectiveCameraController.h
Huan/include/imgui/: ImGuiLayer.h
Huan/include/util/: ApplicationLocator.h  Input.h  Log.h  StbImage.h  TimeStep.h
Huan/include/util/stb_image/: StbImage.h
Huan/interface/: EntryPoint.h  Huan.h
Huan/src/: Application.cpp  HuanPCH.cpp  Log.cpp
Huan/src/DebugTools/: Instrumentor.cpp
Huan/src/Events/: ApplicationEvent.cpp  Event.cpp  EventDispatcher.cpp  KeyEvent.cpp  MouseEvent.cpp  UselessEvent.cpp
Huan/src/Huan/: Application.cpp
Huan/src/Layer/: Layer.cpp  LayerStack.cpp
Huan/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLVertexArray.cpp
Huan/src/Platform/OpenGL/Buffer/: OpenGLIndexBuffer.cpp  OpenGLVertexBuffer.cpp
Huan/src/Platform/OpenGL/Material/: OpenGLMaterial.cpp
Huan/src/Platform/OpenGL/Texture/: OpenGLTexture2D.cpp
Huan/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Huan/src/Renderer/: RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Scene.cpp  Shader.cpp
Huan/src/Renderer/Buffer/: BufferLayout.cpp
Huan/src/Renderer/Primitives/: Quad2D.cpp
Huan/src/Renderer/Utils/: OrthogonalCamera.cpp  OrthogonalCameraController.cpp  PerspectiveCamera.cpp  PerspectiveCameraController.cpp
Huan/src/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Huan/src/util/: ApplicationLocator.cpp  Input.cpp  Log.cpp  StbImage.cpp
HuanEngine/: CMakeLists.txt
HuanEngine/include/HuanEngine/: HuanEngine.h
HuanEngine/src/: HuanEngine.cpp
Resource/Shaders/test1/: test1.frag  test1.vert
Sandbox/: CMakeLists.txt
Sandbox/include/: ExampleLayer.h  Sandbox.h  Sandbox2D.h  SandboxApp.h
Sandbox/src/: Application.cpp  ExampleLayer.cpp  Sandbox.cpp  Sandbox2D.cpp  SandboxApp.cpp
